# Alkanes CLI Common Library
#
# This crate contains all the core business logic for the alkanes CLI project.
# It's designed to be WASM-compatible and provides trait abstractions
# for system calls, JSON-RPC, and disk I/O.
#
# Key features:
# - WASM-compatible (no std::fs, no tokio::process, etc.)
# - Trait-based abstractions for system dependencies
# - Pure business logic without CLI concerns
# - Can be imported into web applications

[package]
name = "alkanes-cli-common"
version.workspace = true
edition = "2021"
description = "Core alkanes CLI library for Bitcoin wallet operations, alkanes smart contracts, and blockchain interaction"
authors = ["Alkanes Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kungfuflex/alkanes-rs"
keywords = ["bitcoin", "alkanes", "smart-contracts", "wallet", "blockchain"]
categories = ["cryptography::cryptocurrencies", "web-programming", "wasm"]

[lib]
name = "alkanes_cli_common"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "alkanes-cli-common-worker"
path = "src/worker_entry.rs"
required-features = ["worker"]

[dependencies]
# Core Bitcoin functionality
bitcoin = { workspace = true }
bitcoin_hashes = { workspace = true }
ordinals = { workspace = true }

alkanes-asc = { path = "../alkanes-asc" }
alkanes-pretty-print-macro = { path = "../alkanes-pretty-print-macro" }
 
# Cryptography and wallet functionality
secp256k1 = { workspace = true }
bip39 = { workspace = true }
pbkdf2 = { version = "0.12" }
aes-gcm = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }
sha2 = { workspace = true }
 
psbt-v2 = { workspace = true }

# FROST-related dependencies
frost-secp256k1-tr = { version = "2.1.0", features = ["serde"], optional = true }
frost-core = { version = "2.1.0", features = ["serde"], optional = true }
elliptic-curve = { version = "0.13.8", features = ["sec1"], optional = true }
ff = { version = "0.13.0", optional = true }
 
 # Async runtime (WASM-compatible features only) - not available for wasip2
 futures = { workspace = true, optional = true }

# Serialization/Deserialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true }

# Utilities
hex = { workspace = true }
async-trait = { workspace = true, optional = true }
base64 = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
smallvec = { workspace = true }
leb128 = { version = "0.2.5", default-features = false }

# Alloy for Ethereum ABI encoding/decoding
alloy-sol-types = { version = "0.7", default-features = false }
alloy-primitives = { version = "0.7", default-features = false }
alloy-dyn-abi = { version = "0.7", default-features = false }

# emasm-rs for EVM bytecode generation
emasm = { workspace = true }
emasm-common = { workspace = true }

# Alkanes-rs crates
alkanes-support = { workspace = true }
protorune-support = { workspace = true }
metashrew-support = { workspace = true }
prost = { workspace = true }

# WASM runtime for alkane inspection
wasmi = { workspace = true, optional = true }
wasmprinter = { workspace = true, optional = true }
wat = { workspace = true, optional = true }
sha3 = { workspace = true }
spin = { workspace = true, optional = true }
wasmparser = { workspace = true, optional = true }
web-sys = { version = "0.3", features = ["SubtleCrypto", "CryptoKey", "CryptoKeyPair", "Pbkdf2Params", "AesGcmParams", "Crypto", "Window"], optional = true }
gloo-worker = { version = "0.5", features = [ "futures" ] }
gloo-worker-macros = "0.1"
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4", optional = true }

# Additional dependencies for comprehensive functionality
dirs = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
flate2 = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"], optional = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"], optional = true, default-features = false }
url = { version = "2.5.0", optional = true }
clap = { workspace = true, features = ["derive"], default-features = false }
bitcoincore-rpc = { workspace = true, optional = true }
bech32.workspace = true

# Optional: persistent sqlite cache backend (cache-sqlite feature).
# Uses sqlx-sqlite to share libsqlite3-sys version with alkanes-contract-indexer.
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros"], optional = true }

# Optional: gRPC cache shim (cache-grpc feature) for subfrost-mobile integration
tonic = { version = "0.12", default-features = false, features = ["codegen", "prost", "transport"], optional = true }
prost-types = { version = "0.13", optional = true }

# Optional: new-protocol WalletConnect signer (wc-signer + wc-signer-native).
# Codec + signer state machine now lives in the sibling `wc-signer-core`
# crate (post-tick-#618 carve-out) so subfrost-wallet-web-sys can reuse
# the same Rust state machine in the browser. This crate keeps the
# native transport (tlsfetch-ws WSS dial + in-tree http_async POST
# for /v1/pair-wake — kept off reqwest by design) and the native
# file-backed SessionStorage on top.
wc-signer-core   = { path = "../wc-signer-core", default-features = false, optional = true }
frtun-pair       = { path = "../../vendor/frtun-pair", optional = true }
# Native WSS dial uses tlsfetch-ws (vendor/tlsfetch-ws), tick 2 of the
# TLSFETCH-WS migration. The crate is TLS-engine-agnostic — gets us
# off the frtun-pair `native` feature (formerly `client-native`) and
# onto a shared, tested WSS client we can grow across mobile + extension.
tlsfetch-ws      = { workspace = true, optional = true }
bytes            = { workspace = true, optional = true }

# Bare-async H1/H1S helper that drives the `/v1/pair-wake` POST in the
# WC signer's native transport. Replaces the reqwest dependency that
# used to live there. Engine-agnostic — only public rustls 0.23 API, no
# `[patch.crates-io]` shenanigans. Was an inline module
# (src/wc_signer/http_async.rs) pre-2026-06-10; now lives in the
# vendored `frtun-http-async` crate to share with frtun-push-proxy +
# frtun-pair-bridge upstream.
frtun-http-async = { workspace = true, optional = true }

[features]
default = ["std", "wasm-inspection", "native-deps", "cache-sqlite"]
std = ["tokio", "reqwest", "url", "bitcoincore-rpc", "dirs", "tempfile", "futures", "async-trait"]
wasm-inspection = ["wasmi", "wasmprinter", "wat", "spin", "wasmparser", "web-sys", "js-sys", "wasm-bindgen-futures"]
native-deps = []
web-compat = ["spin", "std"]
worker = []
frost = ["frost-secp256k1-tr", "frost-core", "elliptic-curve", "ff"]
wasip2 = []  # No std, no tokio, no reqwest, no futures, no async-trait - only core types and logic

# Sqlite-backed AlkanesCache (~/.alkanes/cache.sqlite3). Requires `std`.
cache-sqlite = ["std", "sqlx"]
# gRPC-backed AlkanesCache shim for subfrost-mobile. Requires `std`.
cache-grpc = ["std", "tonic", "prost-types"]

# Codec-only WC signer (re-exports the carved `wc-signer-core` crate).
# Wasm-safe; no I/O deps. The actual codec + signer state machine lives
# in `wc-signer-core`; consumers who want only that should depend on
# `wc-signer-core` directly.
wc-signer = ["dep:wc-signer-core", "async-trait"]
# Typed-frame + PING/PONG reachability probe support. Mirrored on the
# canonical frtun-pair crate (~/subfrost-mobile/crates/frtun-pair); the
# wire shape changes when enabled, so both peers must flip the flag
# together. The wc_signer adds a fast-fail `ping` gate at the front of
# `send_request`; native transport's PairStreamAdapter implements
# WalletPairStream::ping by delegating to frtun_pair::PairStream::ping.
icmp = ["frtun-pair/icmp", "wc-signer-core/icmp"]
# Native transport + file storage implementations of the WC signer.
# Pulls in tokio + frtun-pair (codec only — no `native` feature) +
# tlsfetch-ws + dirs. The pair-wake POST goes through the in-tree
# `src/wc_signer/http_async.rs` helper (tokio + tokio-rustls + rustls
# + webpki-roots + httparse) — NOT reqwest — to keep this subgraph off
# a second HTTP stack and off any rustls fork.
#
# (reqwest is still transitively present via `std` for other modules
# in this crate, but the wc_signer subgraph itself no longer reaches
# for it.)
wc-signer-native = [
    "wc-signer",
    "wc-signer-core/native-time",
    "std",
    "tokio",
    "futures",
    "dirs",
    "frtun-pair",
    "tlsfetch-ws",
    "bytes",
    "url",
    "dep:frtun-http-async",
]

test-utils = []

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
alkanes-cli-common = { path = ".", features = ["test-utils"] }
tokio = { workspace = true, features = ["macros", "rt", "time", "sync", "test-util"] }
env_logger = "0.10"
#wiremock = "0.6.0"  # Temporarily disabled due to compatibility issues
mockall = { workspace = true }
bech32 = { workspace = true }
tempfile = { workspace = true }
anyhow = { workspace = true }
# Tick-#618 — wc_signer_e2e.rs uses these directly; they used to be
# transitive deps via the un-carved `wc_signer` module.
x25519-dalek = { version = "2", features = ["static_secrets"] }
async-trait = { workspace = true }

# WASM-specific configuration
[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "0.6"
gloo-timers = { version = "0.3.0", features = ["futures"] }
tsify = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2"
features = ["js"]


