[package]
name = "alkanes-cli-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
async-trait = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
bitcoin = { workspace = true }
secp256k1 = { workspace = true }
psbt-v2 = "0.1.0"
alkanes-cli-common = { path = "../alkanes-cli-common" }
alkanes-cli-asc = { path = "../alkanes-cli-asc" }
url = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
bip39 = { workspace = true }
chrono = { workspace = true }
smallvec = { workspace = true }
rpassword = "7.3"
tabled = { workspace = true }
