[package]
name = "alkanes-data-api"
version.workspace = true
edition = "2021"
authors = ["Alkanes Team"]
description = "REST API for alkanes blockchain data and AMM statistics"
license = "MIT"

[[bin]]
name = "alkanes-data-api"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4.8"
actix-cors = "0.7"

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "time", "json", "chrono", "bigdecimal", "macros"] }
redis = { version = "0.25", features = ["tokio-comp", "aio", "connection-manager"] }

# Bitcoin
bitcoin = { workspace = true }

# HTTP client
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

# Ethereum/Alloy for price feeds
alloy = { version = "0.6", features = ["full", "provider-http", "rpc-types-eth"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }
env_logger = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
hex = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
once_cell = { workspace = true }
uuid = { version = "1.8", features = ["v4", "serde"] }
dotenvy = "0.15"
rand = { workspace = true }

# Alkanes dependencies
alkanes-support = { workspace = true }
alkanes-cli-common = { path = "../alkanes-cli-common", features = ["std"] }

[dev-dependencies]
tempfile = { workspace = true }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
