[package]
name = "alkanes-gpu-shader"
version = "0.5.2"
edition = "2021"
description = "GPU compute shader for alkanes parallel execution"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "spirv")'.dependencies]
spirv-std.workspace = true
alkanes-alloc = { path = "../alkanes-alloc" }
alkanes-sync = { path = "../alkanes-sync" }
# Full alkanes-wasmi integration with SPIR-V compatibility
wasmi = { path = "../alkanes-wasmi", package = "wasmi", default-features = false }
wasmi_core = { path = "../alkanes-core", package = "wasmi_core", default-features = false }
wasmi_collections = { path = "../alkanes-collections", package = "wasmi_collections", default-features = false }
wasmparser = { path = "../alkanes-wasmparser", package = "wasmparser", default-features = false }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
spirv-std = { workspace = true, default-features = true }
alkanes-gpu = { path = "../alkanes-gpu" }
alkanes-support = { path = "../alkanes-support" }
metashrew-support = { path = "../metashrew-support" }
protorune-support = { path = "../protorune-support" }
bitcoin = "0.32"
anyhow = "1.0"

[dependencies]
# Only spirv-std for SPIR-V target - no std/alloc dependencies

[package.metadata.rust-gpu.build]
capabilities = ["Int64", "Int16", "StorageBuffer16BitAccess"]
