[package]
name = "alkanes-gpu-shader"
version = "0.5.2"
edition = "2021"
description = "GPU compute shader for alkanes parallel execution"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "spirv")'.dependencies]
spirv-std.workspace = true
# Minimal dependencies for SPIR-V compatibility
# alkanes-alloc = { path = "../alkanes-alloc" }  # Removed - causes SPIR-V bitcast issues

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
spirv-std = { workspace = true, default-features = true }
alkanes-gpu = { path = "../alkanes-gpu" }
alkanes-support = { path = "../alkanes-support" }
metashrew-support = { path = "../metashrew-support" }
protorune-support = { path = "../protorune-support" }
bitcoin = "0.32"
anyhow = "1.0"

[dependencies]
# Core dependencies that work in both SPIR-V and non-SPIR-V targets

[package.metadata.rust-gpu.build]
capabilities = ["Int64", "Int16", "StorageBuffer16BitAccess"]
