[package]
name = "alkanes-gpu"
version = "0.5.2"
edition = "2021"
description = "GPU compute shaders for alkanes parallel execution"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Basic utilities
anyhow = "1.0"
serde = { version = "1.0.210", features = ["derive"] }

# Core alkanes dependencies
alkanes-support = { path = "../alkanes-support" }
protorune-support = { path = "../protorune-support" }
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew", branch = "kungfuflex/vulkan" }

# Bitcoin and crypto
bitcoin = "0.32"

# WASM runtime
wasmi = "0.32"

# SPIR-V compilation dependencies (optional)
# Note: These are commented out to avoid compilation issues
# spirv-std = { version = "0.9", default-features = false, optional = true }

[build-dependencies]
# spirv-builder = { version = "0.9", optional = true }
which = "4.4"
anyhow = "1.0"

[features]
default = []
# Feature for building SPIR-V shaders (placeholder for now)
spirv = []
