[package]
name = "alkanes-gpu"
version = "0.5.2"
edition = "2021"
description = "GPU compute shaders for alkanes parallel execution"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Basic utilities
anyhow = { version = "1.0", optional = true }
serde = { version = "1.0.210", features = ["derive"], optional = true }

# Core alkanes dependencies
alkanes-support = { path = "../alkanes-support", optional = true }
protorune-support = { path = "../protorune-support", optional = true }
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew", branch = "kungfuflex/vulkan", optional = true }

# Bitcoin and crypto
bitcoin = { version = "0.32", optional = true }

# WASM runtime with fuel support
wasmi = { version = "0.31", optional = true }

# SPIR-V compilation dependencies (optional)
# Note: These are commented out to avoid compilation issues
# spirv-std = { version = "0.9", default-features = false, optional = true }

[build-dependencies]
spirv-builder = "0.9"
which = "4.4"
anyhow = "1.0"

[dev-dependencies]
# Basic testing utilities
tempfile = "3.0"

[features]
default = ["std"]
# Feature for including compiled SPIR-V shaders
spirv = []
# Standard library features
std = ["anyhow", "serde", "alkanes-support", "protorune-support", "metashrew-support", "bitcoin", "wasmi"]
