[package]
name = "alkanes-jsonrpc"
version = "0.1.0"
edition = "2021"
authors = ["Alkanes Team"]
description = "Unified JSON-RPC reverse proxy server for alkanes ecosystem"
license = "MIT"

[[bin]]
name = "alkanes-jsonrpc"
path = "src/main.rs"

[dependencies]
actix-web = "4.8"
actix-cors = "0.7"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
url = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
bitcoin = { workspace = true }
alkanes-support = { workspace = true }
alkanes-cli-common = { path = "../alkanes-cli-common", features = ["std"] }
prost = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
