# alkanes-jsonrpc - Unified JSON-RPC reverse proxy server
#
# This service routes JSON-RPC requests to various backend services in the
# alkanes ecosystem (ord, esplora, metashrew, bitcoind, subfrost-rpc, etc.).
#
# ## Key Dependencies
# - leb128: Required for alkanes_simulate handler to encode contract call data
#   in LEB128 format (Little Endian Base 128), the variable-length integer
#   encoding used throughout the alkanes protocol
# - prost: Protobuf encoding/decoding for MessageContextParcel
# - alkanes-cli-common: Provides protobuf definitions and shared types
#
# ## Historical Note
# The leb128 dependency was added to support the alkanes_simulate RPC handler,
# which enables alkanes-data-api to query pool data via RPC simulation without
# database indexing. This is critical for regtest environments.

[package]
name = "alkanes-jsonrpc"
version.workspace = true
edition = "2021"
authors = ["Alkanes Team"]
description = "Unified JSON-RPC reverse proxy server for alkanes ecosystem"
license = "MIT"

[[bin]]
name = "alkanes-jsonrpc"
path = "src/main.rs"

[dependencies]
actix-web = "4.8"
actix-cors = "0.7"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
url = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
bitcoin = { workspace = true }
alkanes-support = { workspace = true }
alkanes-cli-common = { path = "../alkanes-cli-common", features = ["std"] }
prost = { workspace = true }
bytes = { workspace = true }
leb128 = "0.2"
mlua = { version = "0.9", features = ["lua54", "async", "send", "vendored"] }
sha2 = { workspace = true }
moka = { version = "0.12", features = ["sync"] }

[dev-dependencies]
tempfile = "3.0"
