[package]
name = "alkanes-native"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
metashrew-sync = { path = "../metashrew-sync", features = ["native-deps"] }
anyhow = "1.0.75"
bitcoincore-rpc = "0.19.0"
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
async-trait = "0.1.77"
bitcoin = { workspace = true }
clap = { version = "4.5.4", features = ["derive"] }
jsonrpsee = { version = "0.22.5", default-features = false, features = ["server-core", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
metashrew-core = { path = "../metashrew-core" }
