[package]
name = "alkanes-native"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
metashrew-sync = { path = "../metashrew-sync", features = ["native-deps"] }
rockshrew-mono = { path = "../rockshrew-mono" }
anyhow = "1.0.75"
bitcoincore-rpc = "0.19.0"
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
async-trait = "0.1.77"
bitcoin = { workspace = true }
clap = { version = "4.5.4", features = ["derive"] }
jsonrpsee = { version = "0.22.5", default-features = false, features = ["server-core", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
rocksdb = { version = "0.21.0", features = ["multi-threaded-cf"] }
metashrew-core = { path = "../metashrew-core", features = ["native-deps"] }
alkanes-indexer = { path = "../alkanes-indexer" }
memshrew-runtime = { path = "../memshrew" }
alkanes-macros = { path = "../alkanes-macros" }

[dev-dependencies]
memshrew-runtime = { path = "../memshrew" }
hex_lit = "0.1.0"
metashrew-support = { path = "../metashrew-support" }
protorune-support = { path = "../protorune-support" }
wasm-bindgen-test = "0.3.42"
alkanes-support = { path = "../alkanes-support" }
protorune = { path = "../protorune", features = ["test-utils"] }
alkanes-indexer = { path = "../alkanes-indexer", features = ["test-utils"] }
ordinals = { workspace = true }
alkanes-std-orbital = { path = "../alkanes-std-orbital" }
borsh = "1.4.0"
sha2 = "0.10.8"
