[package]
name = "alkanes-runtime"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
resolver = "2"

[features]
test-utils = []
panic-hook = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-support = { workspace = true }
alkanes-macros = { workspace = true }
anyhow = { workspace = true }
bitcoin = { workspace = true }
metashrew-support = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-test = { workspace = true }
